:sparkles: maximize mysqli support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+SITE_TITLE="Books I'm Reading"
+SITE_AUTHOR="John Doe"
+SITE_EMAIL=site@email.com
+SITE_DESCRIPTION="List of my reading books, both owned and wishlisted ones, you can have too!"
+SITE_KEYWORDS="books,reading,reading list"
+
 DB_HOSTNAME=localhost
 DB_USERNAME=root
 DB_PASSWORD=
